fixed overflow

--- a/scss/index_style.scss
+++ b/scss/index_style.scss
@@ -22,6 +22,7 @@ body {
   background-color: #BABEBF;
   font-family: $fontStyle, sans-serif;
   font-size: $fontSize;
+  overflow-x: hidden;
 }
 
 h5 {
